// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user - get agency danish 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "agency": Object {
        "result": Array [
          Object {
            "name": "DBCTestBibliotek",
            "openingHours": "VIP 4.9: Åbningstider<br>
mandag<br>
tirsdag<br>
onsdag<br>
torsdag<br>
fredag<br>
lørdag",
          },
          Object {
            "name": "DBCtest_2",
            "openingHours": null,
          },
          Object {
            "name": "DBC-bibilioteksekspressen",
            "openingHours": null,
          },
        ],
      },
      "mail": "test@dbc.dk",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get agency english 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "agency": Object {
        "result": Array [
          Object {
            "name": "DBCTestBibliotek",
            "openingHours": "VIP 4.9: Åbningstider<br>
mandag<br>
tirsdag<br>
onsdag<br>
torsdag<br>
fredag<br>
lørdag",
          },
          Object {
            "name": "DBCtest_2",
            "openingHours": null,
          },
          Object {
            "name": "DBC-bibilioteksekspressen",
            "openingHours": null,
          },
        ],
      },
      "mail": "test@dbc.dk",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get basic data 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "country": "DK",
      "culrMail": "some@mail.com",
      "mail": "test@dbc.dk",
      "municipalityAgencyId": "715100",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get debt 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Expected Iterable, but did not find one for field "User.debt".],
  ],
}
`;

exports[`user - get loans 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Expected Iterable, but did not find one for field "User.loans".],
  ],
}
`;

exports[`user - get loans 2`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Expected Iterable, but did not find one for field "User.loans".],
  ],
}
`;

exports[`user - get orders 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Expected Iterable, but did not find one for field "User.orders".],
  ],
}
`;
